--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.12.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.21.0",
     "tslib": "^2.3.0",
